[gd_scene load_steps=2 format=3 uid="uid://b3fx2moxlvulj"]

[ext_resource type="Script" uid="uid://cpghcsf385eac" path="res://src/ui/rewrite_copy_menu.gd" id="1_ykuxl"]

[node name="RewriteCopyMenu" type="CanvasLayer"]
script = ExtResource("1_ykuxl")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
offset_left = -36.0
offset_top = -28.0
offset_right = 1998.0
offset_bottom = 1130.0
color = Color(0, 0, 0, 0.47843137)

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
offset_left = 7.0
offset_top = 123.0
offset_right = 7.0
offset_bottom = 193.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "SELECT A SHADOW TO REWRITE"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Upgrades are applied only to you and your NEW shadows! Replace your old shadows to be more effective"
horizontal_alignment = 1

[node name="CopiesCenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Copies" type="HBoxContainer" parent="CopiesCenterContainer"]
layout_mode = 2
